# grover-dashboard

./: .env.example  .gitignore  README.md  config.example.toml  config.py  create_checklists.py  generate_dashboard.py  models.py  pyproject.toml  run.sh  styles.css
docs/: acceptance_checklist.example.md  acceptance_checklist.md
templates/: dashboard.html
