[project]
name = "personal-dashboard"
version = "0.1.0"
description = "Personal dashboard that generates HTML files with email, weather, and project information"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "jinja2>=3.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.25.0",
    "toml>=0.10.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
dashboard = "generate_dashboard:generate_dashboard"
